XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>

* New feature: detecting files changed outside of codimension.
* Bug fix: loading project from the filesystem browser checks if the opened
  files are saved. Issue #295.
* Some fixes in the replace implementation.
* Bug fix: incorrect interpretation of the search pattern in 'Find in files'.
  Issue #301.
* Ctrl+C/Ctrl+Insert to copy the current line if there is no selection.
  Issue #304.
* New editor setting: auto remove trailing spaces on saving. Issue #300.
* New setting: HOME moves the cursor to position 0 or to the first non space
  character. Issue #302.
* Share the 'find' and 'replace what' search history. Issue #298.
* Make the match selected in the incremental find/replace. Issue #297.
* Bug fix in the replace implementation. Adding separate button 'replace and
  move'. Issue #277.
* Making Ctrl+F and Ctrl+R select the text to search even if the widget has
  already been displayed. Issue #291.
* Making Ctrl+X a synonym to Shift+Del. Issue #290.
* Bug fix: F3/Shift F3 now work for the find/replace search string depending of
  what dialog was shown last. Issue #289.
* Updating the help screen. Issue #281.
* Updating the welcome screen. Issue #279.
* Making Shift+Home/End select till the beginning/end of a visible line.
  Issue #286.
* Adding support for Alt+Shift+Left/Right - select a word part. Issue #287.
* Adding support for Alt+Shift+Up/Down - select till the beginning/end of a
  paragraph. Issue #288.
* Adding support for Shift+Del - copy to a buffer and delete a selected text
  (if so) or the current line. Issue #285.
* Making HOME/END jumping to the beginning/end of the visible line. Issue #284.
* Adding support for Alt+Up and Alt+Down hot keys
* Switching history hot keys to Alt+PgDown and Alt+PgUp
* Adding support for Alt+Left and Alt+Right hot keys
* Bug fix: check that all the modified files are saved before letting a new
  project to be created. Issue #273.