@@ -1,5 +1,7 @@
 XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* New feature: double click on the status bar path label copies the file path
+  to the clipboard.
 * New feature: detecting files changed outside of codimension.
 * Bug fix: loading project from the filesystem browser checks if the opened
   files are saved. Issue #295.
